# LNG_Nowcasting

./: .gitignore  CLAUDE.md  Makefile  pyproject.toml
.github/workflows/: ingest-alsi.yml  nowcast-build.yml  vps-ingester-health-check.yml
dashboard/: .gitignore  evidence.config.yaml  package-lock.json  package.json
dashboard/pages/: +layout.svelte  backtest-accuracy.md  index.md  tracker.md
dashboard/sources/marts_backtest/: backtest_metrics.sql  connection.yaml  vessel_positions.sql
data/reference/: README.md  lng_carriers.csv  terminal_geofences.geojson
deploy/: README.md
deploy/systemd/: lng-cleanup-local-raw.service  lng-cleanup-local-raw.timer  lng-ingest-aisstream.service
docs/: data_sources.md  risks.md
docs/decisions/: 0001-architecture.md
docs/milestones/: M0.md  M1.md  M2.md  M3.md  M4.md  M5.md  M6.md  M7.md
docs/progress/: M1.md  M2.md  M3.md  M4.md  M5.md  M6.md  M7.md
scripts/: cleanup_local_raw.py  validate_marts_schema.py
src/lng/events/: detect.py  geofence.py
src/lng/ingest/: aisstream.py  alsi.py
src/lng/nowcast/: backtest.py  model.py
src/lng/pipeline/: orchestrate.py
src/lng/quality/: checks.py  retention.py
src/lng/vessels/: capacity.py  registry.py
tests/: test_backtest.py  test_event_detection.py  test_geofence.py  test_ingest_aisstream.py  test_ingest_alsi.py  test_nowcast_model.py  test_pipeline_orchestrate.py  test_quality_checks.py  test_retention.py  test_vessel_registry.py
tests/fixtures/: aisstream_sample.jsonl  alsi_sample_response.json  vessel_registry_labeled_sample.json
