[project]
name = "lng-nowcasting"
version = "0.1.0"
description = "Nowcasts European LNG import volumes from AIS carrier tracking."
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=17.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lng"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.parquet"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
