[project]
name = "lng-nowcasting"
version = "0.1.0"
description = "Nowcasts European LNG import volumes from AIS carrier tracking."
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=17.0.0",
    "pandas>=2.2.0",
    "pandera>=0.20.0",
    "shapely>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lng"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.parquet", "shapely", "shapely.geometry", "pandas", "websockets", "websockets.exceptions"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
